[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/img/upgrade/level_up.png" type="Texture" id=1]
[ext_resource path="res://assets/img/upgrade/level_up_guide.png" type="Texture" id=4]
[ext_resource path="res://scripts/HUD/Upgrade.gd" type="Script" id=5]
[ext_resource path="res://scenes/HUD/SkillPlate.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/upgrade/btn_reroll_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/img/upgrade/btn_reroll_unfocused.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/loppu_bold.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 9 )

[node name="Upgrade" type="Node2D"]
script = ExtResource( 5 )

[node name="Panel" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 1 )

[node name="Template" type="Sprite" parent="Panel"]
visible = false
texture = ExtResource( 4 )

[node name="SkillOne" parent="Panel" instance=ExtResource( 6 )]
margin_left = -109.175
margin_top = -117.73
margin_right = 108.825
margin_bottom = -61.7296
focus_neighbour_top = NodePath("../RerollButton")
focus_neighbour_bottom = NodePath("../SkillTwo")

[node name="SkillTwo" parent="Panel" instance=ExtResource( 6 )]
margin_left = -109.123
margin_top = -58.733
margin_right = 108.877
margin_bottom = -2.73296
focus_neighbour_top = NodePath("../SkillOne")
focus_neighbour_bottom = NodePath("../SkillThree")

[node name="SkillThree" parent="Panel" instance=ExtResource( 6 )]
margin_left = -108.956
margin_top = 0.33371
margin_right = 109.044
margin_bottom = 56.3337
focus_neighbour_top = NodePath("../SkillTwo")
focus_neighbour_bottom = NodePath("../SkillFour")

[node name="SkillFour" parent="Panel" instance=ExtResource( 6 )]
margin_left = -109.29
margin_top = 58.733
margin_right = 108.71
margin_bottom = 114.733
focus_neighbour_top = NodePath("../SkillThree")
focus_neighbour_bottom = NodePath("../RerollButton")

[node name="RerollButton" type="TextureButton" parent="Panel"]
margin_left = -13.3473
margin_top = 121.137
margin_right = 108.653
margin_bottom = 161.137
focus_neighbour_top = NodePath("../SkillFour")
focus_neighbour_bottom = NodePath("../SkillOne")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RerollCost" type="Label" parent="Panel/RerollButton"]
margin_left = 81.6403
margin_top = -2.96423
margin_right = 115.64
margin_bottom = 23.0358
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0.603922, 1 )
text = "1000"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Panel/SkillOne" to="." method="_on_SkillOne_focus_entered"]
[connection signal="mouse_entered" from="Panel/SkillOne" to="." method="_on_SkillOne_mouse_entered"]
[connection signal="pressed" from="Panel/SkillOne" to="." method="_on_SkillOne_pressed"]
[connection signal="focus_entered" from="Panel/SkillTwo" to="." method="_on_SkillTwo_focus_entered"]
[connection signal="mouse_entered" from="Panel/SkillTwo" to="." method="_on_SkillTwo_mouse_entered"]
[connection signal="pressed" from="Panel/SkillTwo" to="." method="_on_SkillTwo_pressed"]
[connection signal="focus_entered" from="Panel/SkillThree" to="." method="_on_SkillThree_focus_entered"]
[connection signal="mouse_entered" from="Panel/SkillThree" to="." method="_on_SkillThree_mouse_entered"]
[connection signal="pressed" from="Panel/SkillThree" to="." method="_on_SkillThree_pressed"]
[connection signal="focus_entered" from="Panel/SkillFour" to="." method="_on_SkillFour_focus_entered"]
[connection signal="mouse_entered" from="Panel/SkillFour" to="." method="_on_SkillFour_mouse_entered"]
[connection signal="pressed" from="Panel/SkillFour" to="." method="_on_SkillFour_pressed"]
[connection signal="focus_entered" from="Panel/RerollButton" to="." method="_on_RerollButton_focus_entered"]
[connection signal="mouse_entered" from="Panel/RerollButton" to="." method="_on_RerollButton_mouse_entered"]
[connection signal="pressed" from="Panel/RerollButton" to="." method="_on_RerollButton_pressed"]
